feat(email): add email sending with SMTP support
- Add EmailService using lettre crate
- Implement send campaign endpoint (POST /api/campaigns/:id/send)
- Update all handlers to support new state type
- Add SMTP configuration for Ethereal test emails
- Record sent emails in database

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,12 @@ DATABASE_URL=postgres://username:password@localhost/phisherman
 # Server
 HOST=127.0.0.1
 PORT=3000
+
+# SMTP (Email Sending) - Using Ethereal for testing
+# Get free test credentials at https://ethereal.email/
+SMTP_SERVER=smtp.ethereal.email
+SMTP_PORT=587
+SMTP_USERNAME=your-ethereal-username
+SMTP_PASSWORD=your-ethereal-password
+FROM_EMAIL=noreply@phisherman.test
+FROM_NAME=PhisherMan Security
