feat(frontend/email) add landing page, start of email entering page, openai key var in docker yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
       HOST: 0.0.0.0
       PORT: 3000
       RUST_LOG: info
+      OPENAI_API_KEY: ${OPENAI_API_KEY}
     ports:
       - "3000:3000"
     volumes:
