feat(docker) updated .env.example with openai variable

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ SMTP_USERNAME=your-ethereal-username
 SMTP_PASSWORD=your-ethereal-password
 FROM_EMAIL=noreply@phisherman.test
 FROM_NAME=PhisherMan Security
+
+# OpenAI Key for Generated Emails
+OPENAI_API_KEY=YOUR-OPENAI-API-KEY
