feat(email): add Gmail SMTP support with STARTTLS
- Configure Gmail SMTP with STARTTLS for port 587
- Add tokio1-native-tls feature to lettre dependency
- Add TLS parameters for secure email sending
- Update docker-compose.yml to support SMTP environment variables
- Email sending now works with Gmail SMTP

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
 # Email (for future use)
-lettre = "0.11"
+lettre = { version = "0.11", features = ["tokio1-native-tls"] }
 
 # HTTP client (for future GPT API)
 reqwest = { version = "0.12", features = ["json"] }
