--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ reqwest = { version = "0.12", features = ["json"] }
 uuid = { version = "1", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 dotenvy = "0.15"
+regex = "1"
 
 # Logging
 tracing = "0.1"
